updated about us and removed footer mentions to hugo and theme (will add a specific section for that)

--- a/src/themes/juice-bar/layouts/_default/about.html
+++ b/src/themes/juice-bar/layouts/_default/about.html
@@ -7,7 +7,9 @@
     </div>
     {{ end }}
     <div class="archive">
+        {{ if .Params.showtitle}}
         <h1 class="title is-1">{{ .Title }}</h1>
+        {{ end }}
         <div class="content about-content">
             {{ .Content }}
         </div>
