setting adjusting auto theme selection

--- a/src/themes/juice-bar/layouts/partials/header.html
+++ b/src/themes/juice-bar/layouts/partials/header.html
@@ -73,7 +73,7 @@
     }
 
     // Retrieve the user-selected theme mode from local storage
-    let theme = localStorage.getItem("theme") || "light";
+    let theme = localStorage.getItem("theme") || "none";
     const isDarkMode = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
     if (isDarkMode) {
         // Site is in dark mode
@@ -83,7 +83,10 @@
         // Site is in light mode
         setTheme('light');
     }
-    setTheme(theme);
+
+    if (theme !== "none") {
+        setTheme(theme);
+    }
 
     // Toggle theme when sun icon is clicked
     document.getElementById("theme-toggle").addEventListener("click", function() {
